# vivcms

./: Cargo.toml  README.md  diesel.toml  flake.nix  notes.md
migrations/2019-06-09-181812_create_posts/: down.sql  up.sql
migrations/2019-06-09-182608_create_users/: up.sql
src/: auth.rs  db.rs  main.rs  models.rs  schema.rs
src/pages/: mod.rs  post_editor.rs  view_board_threads.rs  view_thread.rs
src/pages/admin/: boards.rs
src/storage/: mod.rs
src/storage/crud/: boards.rs  db.rs  mod.rs  posts.rs  threads.rs  user.rs
src/storage/db/: mod.rs  models.rs  schema.rs
templates/: create_post.html  edit_board.html  edit_post.html  hello.html  login.html  post_editor.html  view_board_threads.html  view_boards.html  view_post.html  view_thread.html
